# coding_practice

./: .gitignore  .gitreview  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  build.gradle  groups  lombok.config  project.config  settings.gradle  test.txt  test2.txt
arrays/: build.gradle
binary_chop/: .gitignore  README.md  build.gradle  settings.gradle
binary_search_tree/: build.gradle
binary_trees/: build.gradle
bit_manipulation/: build.gradle
concurrency/: build.gradle
concurrent_practice/: build.gradle  settings.gradle
data_structures/: build.gradle  settings.gradle
dynamic_programming/: build.gradle
event-hanlder/: .gitignore  build.gradle  settings.gradle
event_handler/: build.gradle  settings.gradle
graphs/: build.gradle
greedy_algorithms/: build.gradle
guice_test/: .gitignore  build.gradle  settings.gradle
hash_tables/: build.gradle
heaps/: build.gradle
interface_scanner/: build.gradle  pom.xml
linked_lists/: build.gradle
primitive_types/: build.gradle
queues/: build.gradle
regex/: build.gradle
regex/src/main/c/: CMakeLists.txt  pcre2demo.c  pcre2demo.h
regex/src/main/c/tests/: test_run_regex.c  test_run_regexes.c
searching/: build.gradle
simple_functions/: .gitignore  build.gradle  settings.gradle
sorting/: build.gradle
strings/: build.gradle
system_design/: delivery_service.excalidraw  key_value_store.excalidraw  news_feed2.excalidraw  object_storage.excalidraw  rate_limiter  rate_limiter.excalidraw  rate_limiter2.excalidraw  social_network  stock_data  ticket_service.excalidraw  tmp  url_shortener2.excalidraw  web_crawler.excalidraw  webcrawler2.excalidraw  (+2 more)
(+819 files in other folders)
